bug with text aligning in radio-button fixed

--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -2,7 +2,7 @@
 
 .radio-button{
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   &__button{
     --opacity: 0;
     flex-shrink: 0;
@@ -45,7 +45,7 @@
   }
 
   &__text{
-    text-align: center;
+    padding-left: 10px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
